Implement versioned URLs and improved cache strategy
- Add versioned widget URLs (v{version}/widget.iife.js) in loader
- Inject version from package.json during build via Vite define
- Update vercel.json with different cache rules:
  - loader.js: 1 hour cache (no immutable) for quick updates
  - widget.*.js: 1 year immutable cache for optimal performance
  - Add rewrite rules for versioned paths
- This ensures loader updates quickly while widget files are cached long-term

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,49 @@
   "outputDirectory": "dist",
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/loader.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type"
+        }
+      ]
+    },
+    {
+      "source": "/widget.(.*).js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type"
+        }
+      ]
+    },
+    {
+      "source": "/v(.*)/widget.(.*).js",
       "headers": [
         {
           "key": "Cache-Control",
@@ -32,6 +74,10 @@
     {
       "source": "/widget.(.*).js",
       "destination": "/widget.$1.js"
+    },
+    {
+      "source": "/v(.*)/widget.(.*).js",
+      "destination": "/widget.$2.js"
     }
   ]
 }
